--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ permalink: /
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
                 <p><span data-i18n="about_me.des">
-                    I am a Python engineer with website development, automation Ops and writing scripts experience. Life is a continuous learning process, so work makes me more rigorous, travel makes my life more colorful. I can make lots of friends when I coding and travel.
+                    林承翰目前就讀於國立交通大學資訊管理與財務金融學系資訊管理研究所，研究興趣含括資料安全、影像處理、數位浮水印、資料挖掘與推薦系統等議題。過去曾於ACM-NCPU競賽獲得佳作，亦於國際研討會發表數篇資訊安全相關議題論文。也擔任國立苑裡高中、靜宜大學資訊相關課程、活動的講師，於資訊扎根的議題努力不懈。
                 </span></p>
             </div>
         </div>
