--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@ permalink: /
             </div>
         </div>
         <div class="row">
-            <!-- python -->
+            <!-- aws -->
             <div class="col-xs-2 wow fadeInLeft">
                 <div class="team-member">
                     <div class="vote-icon">
-                        <i class="icon-python"></i>
+                        <i class="icon-aws"></i>
                     </div>
                 </div>
             </div>
-            <!-- linux -->
+            <!-- php -->
             <div class="col-xs-2 wow fadeInLeft">
                 <div class="team-member">
                     <div class="vote-icon">
-                        <i class="icon-shell"></i>
+                        <i class="icon-php-alt"></i>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@ permalink: /
             <div class="col-xs-2 wow fadeInRight">
                 <div class="team-member">
                     <div class="vote-icon">
-                        <i class="icon-angular"></i>
+                        <i class="icon-ubuntu"></i>
                     </div>
                 </div>
             </div>
