--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ permalink: /
                 <div >
                     <h4>著作</h4>
                     <ul >
-                        <li><a href="http://link.springer.com/chapter/10.1007/978-3-319-50209-0_38" target="_blank">Xiao-Long Liu*; Chia-Chen Lin; Cheng-Han Lin; Li-Juan Lin; Bo-Jun Qiu, Reversible Authentication Scheme for Demosaicked Images without False Detection,IEEE IIHMSP2016, 2016/11</a></li>
+                        <li><a href="http://link.springer.com/chapter/10.1007/978-3-319-50209-0_38" target="_blank">Xiao-Long Liu*; Chia-Chen Lin; Cheng-Han Lin; Li-Juan Lin; Bo-Jun Qiu, Reversible Authentication Scheme for Demosaicked Images without False Detection,IEEE IIHMSP2016, 2016/11</a> 本論文收錄於2017年由springer出版的Advances in Intelligent Information Hiding and Multimedia Signal Processing pp 313-320 中(ISBN:978-3-319-50208-3 ) </li>
 
                         <li><a href="http://ieeexplore.ieee.org/document/7415767/" target="_blank">Chia-Chen Lin*; Cheng-Han Lin; Xiao-Long Liu; Shyan-Ming Yuan, Authentication Table based Fragile Watermarking for Demosaicked Images, IEEE IIHMSP2015, 2015/09/01</a></li>
 
